Fri Jun 22 11:46:25 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Fri Jun 15 10:45:20 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/admin_notes.rst: Correction - we don't "create a lock file", we
	  "lock a file".

Thu Jun 14 14:08:48 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_replicate.cc: Make sure XAPIAN_MAX_CHANGESETS gets unset
	  after testcases which set it, so further testcases don't waste time
	  generating changesets.

Thu Jun 14 13:54:29 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/replication.rst: The value of XAPIAN_MAX_CHANGESETS does now
	  actually determine how many changesets we keep.

Thu Jun 14 13:40:18 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: Force link_all_deplibs_CXX=no for Solaris.

Thu Jun 14 13:13:16 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* xapian-config.in: Don't interpret a missing .la file as meaning that
	  we only have static libraries.

Thu Jun 14 13:01:40 GMT 2012  Olly Betts <olly@survex.com>

	* backends/flint/flint_btreebase.cc,backends/flint/flint_btreebase.h:
	  Remove unused copy constructors for FlintTable_base.

Thu Jun 14 12:14:46 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/brass/brass_table.cc,backends/brass/brass_table.h: We don't
	  need the workaround for existing tables which were built with a 32
	  bit item count for brass, since that bug was fixed in 1.1.4, which
	  is the same version which brass was added in.

Thu Jun 14 11:35:50 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/brass/brass_btreebase.cc,backends/brass/brass_btreebase.h,
	  backends/chert/chert_btreebase.cc,backends/chert/chert_btreebase.h:
	  Remove unused copy constructors for BrassTable_base and
	  ChertTable_base.
